<resources>
    <string name="app_name">Life Saver</string>

    <string name="title_activity_user_details">Member Info</string>
    <string name="title_activity_wall_posts">Public Wall</string>
    <string name="title_activity_new_post">New Post</string>

    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to Life app!</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_members">Members</string>
    <string name="action_wall_posts">Wall Posts</string>
    <string name="action_new_post">New Post</string>
    <string name="action_logout">Logout</string>
    <string name="no_data_from_server">No data received from Server</string>
    <string name="server_not_responding">Server not responding</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="no_internet">No internet connection available</string>
    <string name="post_button">Post</string>
    <string name="back_to_wall">Back to Wall</string>
    <string name="hint_new_post">Enter you post</string>
</resources>
