<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_profile" android:title="@string/action_profile"
    android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_members" android:title="@string/action_members"
        android:orderInCategory="101" app:showAsAction="never" />

    <item android:id="@+id/action_wall_posts" android:title="@string/action_wall_posts"
        android:orderInCategory="101" app:showAsAction="never" />

    <item android:id="@+id/action_new_post" android:title="@string/action_new_post"
        android:orderInCategory="101" app:showAsAction="never" />

    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="102" app:showAsAction="never" />
</menu>
