<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_small"
    android:weightSum="1">

    <EditText
        android:id="@+id/et_post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:lines="7"
        android:hint="@string/hint_new_post"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/post_button" />

    <TextView
        android:id="@+id/tv_back_to_wall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_gravity="right"
        android:padding="@dimen/padding_small"
        android:text="@string/back_to_wall" />
</LinearLayout>